--- a/Html_Css/Style.Css
+++ b/Html_Css/Style.Css
@@ -3,7 +3,7 @@ body{
 }
 h1{
     color: rgb(28, 54, 225);
-    text-align: right;
+    text-align: center;
 }
 h2{
     color: aqua;
@@ -26,7 +26,7 @@ h6{
     text-align: unset;
 }
 p{ 
-    color: red;
+    color:rgb(238, 0, 255);
     font-size: 18px;
     font-style: italic;
     font-weight: bolder;
